<resources>
    <string name="app_name">Smart Alert</string>

    <!-- Strings related to Basic Activity -->

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">START</string>
    <string name="about">About us</string>
    <string name="about_us">For any query contact us at :\n\nlife.app.developer@gmail.com\n\n\nHelpline Number :\n\333-333-3333</string>
    <string name="slide_1_title">Welcome to Smart Alert App</string>
    <string name="slide_1_desc">Let\'s take a tour of our App</string>

    <string name="slide_2_title">\n Report an \nEmergency\n</string>
    <string name="slide_2_desc">Submit a simple form and we will take care of the rest!!</string>

    <string name="slide_3_title">Get alerts of Emergencies around you </string>
    <string name="slide_3_desc">We are watching out for you!!</string>

    <string name="slide_4_title">\nComing Soon in Google Play Store!!</string>
    <string name="slide_4_desc"></string>

    <!-- Strings related to Fire-base Activity -->

    <string name="label_emailpassword">Email/Password Authentication</string>

    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_exit">Sign out and Exit</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <!-- Strings related to Fire-base Cloud Messaging  -->

    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="fcm_message">Samrt Alert</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Alert App</string>
    <string name="nav_header_subtitle">life.app.developer@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


</resources>
